--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,10 +7,8 @@
 
 <body>
 
-  <h1>We'll be right back</h1>
-  <p>
-    The site is currently being updated.
-  </p
+  {{> header}}
+  <p>This is the projects page.</p>
 
   {{> footer}}
 </body
